# PinkDolphin

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260404_0010_baseline.py  20260404_0011_expand_enum_varchar_lengths.py  20260405_0012_add_graph_outlook_support.py  20260405_0013_add_listener_mode.py
backend/app/: __init__.py  main.py
backend/app/analyzers/: attachment.py  base.py  behavior.py  content_rule.py  header_auth.py  llm.py  registry.py  url.py
backend/app/api/: router.py
backend/app/audit/: recorder.py
backend/app/core/: config.py  deps.py  exceptions.py  logging.py  security.py
backend/app/db/: migrations.py  session.py
backend/app/integrations/: antivirus.py  graph_mail.py  imap.py  llm.py  sandbox.py  threat_intel.py
backend/app/models/: __init__.py  action.py  admin_credential.py  analysis.py  attachment.py  audit_log.py  contact_history.py  email.py  email_address.py  enums.py  incident.py  issue_log.py  list_entry.py  mail_account.py  mailbox_sync_cursor.py  mixins.py  privacy_setting.py  rule.py  url.py  user_report.py
backend/app/policies/: scoring.py
backend/app/schemas/: __init__.py  allowlist.py  analysis.py  audit.py  auth.py  common.py  config_management.py  dashboard.py  email.py  incident.py  issue_log.py  mail_account.py  privacy_setting.py  report.py  rule.py
backend/sample_data/: sample_email.eml
backend/scripts/: seed_rules.py
backend/tests/: test_mail_account_service.py
(+96 files in other folders)
